# ChangeLog for dev-haskell/basic-prelude
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/basic-prelude/ChangeLog,v 1.6 2014/12/14 11:11:10 gienah Exp $

*basic-prelude-0.3.10 (14 Dec 2014)

  14 Dec 2014; Mark Wright <gienah@gentoo.org> +basic-prelude-0.3.10.ebuild:
  Bump basic-prelude to 0.3.10

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org>
  basic-prelude-0.3.5.0.ebuild, basic-prelude-0.3.6.0.ebuild,
  basic-prelude-0.3.8.ebuild:
  Drop trailing '.' from description.

  25 Jul 2014; Sergei Trofimovich <slyfox@gentoo.org> metadata.xml:
  Drop redundant '<maintainer>' field, leave only '<herd>'.

*basic-prelude-0.3.8 (02 Jul 2014)

  02 Jul 2014; Mark Wright <gienah@gentoo.org> +basic-prelude-0.3.8.ebuild:
  Bump basic-prelude to 0.3.8

*basic-prelude-0.3.6.0 (13 Sep 2013)

  13 Sep 2013; Mark Wright <gienah@gentoo.org> +basic-prelude-0.3.6.0.ebuild:
  Bump basic-prelude to 0.3.6.0

*basic-prelude-0.3.5.0 (26 Aug 2013)

  26 Aug 2013; Alexander Vershilov <qnikst@gentoo.org>
  +basic-prelude-0.3.5.0.ebuild, +metadata.xml:
  dev-haskell/basic-prelude: initial layout