@@ -2,19 +2,27 @@
 Hash: SHA256
 
 DIST basic-prelude-0.3.10.tar.gz 4943 SHA256 a94c0c94ece5b21bc6ca9a939a118185c5c1e9acdbf93cb46114df79a21d0180 SHA512 c570be987680b5d1b298d096150423bf3c373cac2a17656a6f2a2c68740d0f51b1df24bf952b4bab22d750ed6e55e7d055f082ef65a06e067f706b8476490980 WHIRLPOOL db35f565cfdef951ec15008f54224a462207a8756db69907683f61640fadef5f7ee2447dd383392fce05c247bacb6031a200b8341fbcb57ed0b886678a4b97fc
-DIST basic-prelude-0.3.5.0.tar.gz 4648 SHA256 5991c0011058257b42ca5446909aa1f5ac24a4be11962f45fe7f17b8f78a2edb SHA512 9ea898c280ef41874e8b280d70a445d1b19500356d80c1a81c1d8c6f3738452097f61de66704d5484b4b6d49ef5e5236647f850d019ca578516f3cbb1d4b2771 WHIRLPOOL 5cf7fa0ac244262da30907e17a7cf52e79194160f2a1652b0480dc7eb99fdb89496b68a3a3c2e8acaed41eaf47cfa79850af8677360c57b13f9466ce84c46e91
-DIST basic-prelude-0.3.6.0.tar.gz 4844 SHA256 629c391e1904f2505153da69c211036f5832c12a263d30c4c5706ea4764da8ea SHA512 b60781409eb4d140c135f7628c75ef6be623af25378a10c174b02b2e84b3c52d1de72f9b1caf746af53c7f82f52deba9a87a4b128e813033535def209ee34e40 WHIRLPOOL 988513f173308b1d7fa51f33136a4d6f9079ca0b46b194b49016e3790b740bca361ccd9ee0247b32172a363ac4bd12edfc63e661a9c44d164bd4d230ef66f7ec
-DIST basic-prelude-0.3.8.tar.gz 4887 SHA256 effa8e5982753ddace4ccfc6f387b81395ec7e14ec0e6d0cc93660a09bb6dc53 SHA512 4e9bf6f33750e64037e07ddadc241d596ae12e979bbb87eeff07d42c3805e997cc88b47aac25c5c3fb64aaa693c68dd2ce864b963150f542146926e85cfcd0ff WHIRLPOOL 9a9a10f9d0a251f44de1ac1d63f8314261a967d4e9240ac3469dd100cc9613f92e42527bd4c72e3bebe521e3a52386211ef9e764e38fa8b7dbbc2e7164fd0691
+DIST basic-prelude-0.3.11.tar.gz 5234 SHA256 86368bff6df4fb89cbc3427b5872a2326d4f520e3db466c4e844704ed452cb16 SHA512 450fe8f2c628d93b4a092c29cf229e0722b31604204b3b82956ea19e682c0a3bf83665046425f422185c4b9ab22e65bd87788f814279cb6e4e4aa9057aac9445 WHIRLPOOL 4bf28c948e6b8742483aee3ea2a5b13bb62ba6a7ce16deff0334a3982cbd0b19a82c01e782f594826887866cd5e7b82d3999fc7e2f29ea7eec0d4a7c6571ded7
 EBUILD basic-prelude-0.3.10.ebuild 1126 SHA256 b23d6230c3e76f15c65475d66877b4d94ce51831e89ab9cdac0190252c6fdd7e SHA512 f640c3e5ff745237ac3dafda411e824ac33f95e586665221a8612a9ac5fcaefe86869baadaf9878d599db67da60b8d37f651649f3b95ff6f15004e2b4b17715c WHIRLPOOL b93742ae301d36d1db98e55deed773bd0529b55c33bb9ec7952e77f6a8969b912d34f26ae817922e6fb24cdb9f3c39b0efb8ccfe6a3aafd621421a85474fff5b
-EBUILD basic-prelude-0.3.5.0.ebuild 1022 SHA256 e7c568219d1b1af9339a9706f8edcdf10b8a4d24d2714bc43bbe7e980f67c80d SHA512 4e0483c45d27fc2db2b807075a6547d7db27ea89b13034581339b2454e7c0fc03fa6e59e5be6ba6020e90286ad8f42fd4d2f70a416b7d9b1a9e72ef198cb458d WHIRLPOOL 2967b6e74e45756cf20512b35d0650fe8017a5caed1907f2cb51a42fc463b9ade4fd39c6fb217f1be5e799b7fbc2b14853606cd3aaecc4604a1d63d9d0362ab1
-EBUILD basic-prelude-0.3.6.0.ebuild 1128 SHA256 f721f3233b05dfab8a2e0fcd1866abae72b2e16411fcde8e5ed792ccf61d51cd SHA512 cb0f0567410914c6700a5736c2c78adf6868cd1ca12e38ec1ffd80d115735feb2cb86174519a50ecb738edf5f51adf3781205aa47eec78caf8228ba8742efa2f WHIRLPOOL d7b7721207ad54f4d8b99dcb90db88de031ef61743fa90c2ac115381ed068d8523984df431ce69eb3ea0ea4684558ff6e2b834831d60d32004f6f219d716a701
-EBUILD basic-prelude-0.3.8.ebuild 1123 SHA256 813b0ce8895257916cf159510f66e44f0e47e1c51eede8528e084bc879596fa7 SHA512 d7c4dd75f4b4268e3d9e6488bf3ae125ab20c99fa426910c2e24992ed7f0b7ebfa82ca889f945cf2e99eb70064cb3c54cdcf3572ab5b91ef19a21eea8a834e01 WHIRLPOOL f8d5ab4e2d738deefb295375ac3ed3902771b1296c66af3c5d1f23ae89bb669908d7bb35836c4d71ba56ac36f49646ca49b92f6d86a987e716d3c07682c49d78
-MISC ChangeLog 1160 SHA256 ca57f7b8552a5f9de3412ca4373619704e332d099592d451ec93a516a3cfa416 SHA512 c645d82ce6ff69f45b3cd89605ac21dee60c2fc7e033d87bd22d5d61dc609b687815f432f2f13e1b81f0640847d5d9b3e9e77593720b806b5e38b32db3e75b2c WHIRLPOOL 7546a291476fb3596b46a53dc415c41f6248d6ab27cb92ecdb3a45c754b97c3a9f6a4faba830debe8ee81a71cedaf12b27425d6e0551a90901b6e459da8bdcd3
+EBUILD basic-prelude-0.3.11.ebuild 1121 SHA256 0ca743dd22f8c4dc9bf3044a1c1a3115070ec0decc99fca72b27e81dc7f258b1 SHA512 e260849c059819ab1c2d250880d1c3698b4ec1f4b9c345c963cae5f157a5e55ce069df48f5494107d139fa1e150bd021c08ffb7d54c63f3cc34820d4b0802fdd WHIRLPOOL e4fcb2a3059df130e317ea344069382a1061f6b195895ff60c394b8398c61688519eae88c0db9817cc37707ad8d142fcfd2cb4c21f0a39b8e6e09009553ea615
+MISC ChangeLog 1425 SHA256 3b3d24729af29103dda1ff63354f226dd9b3c2cde77f726a8ffb81578a619ebd SHA512 1f870695ff2130f7d0c3b7edd67a9ee13bdb464c767129455f744861a6b89ab6054e0fd55fdff80fd8daf5c9af0c6a5f0634485ba1fdd7ffbd1cd9c2c72de4f3 WHIRLPOOL b7d39fd5afe657209fb12d953214c772649a52b699f5d7c2cd0132914613587023e60a018a0710cad3cf89add9da55a1db92e6d4df42b588b5454a1d7988aac7
 MISC metadata.xml 1487 SHA256 4f3105b454645899b4d7b8245b6843a676d0089f504a563f7164074c44b610c0 SHA512 04e22d18ac5ca1defc8723f7b8adba5870174e855b6ceec2b0590e4842b23dffd524aecd13e45c118ec9b83c63763705e34208152fca67fc3a8451f315c0020e WHIRLPOOL cab016684f917ec0c4f29478195bcf521db5766688a5165940189f1038feb54fddf7fdb02c9919ebd77c0b3a3769dffc29f6641670230c4aeec45ac35f34891c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iF4EAREIAAYFAlSNcFMACgkQoBEVQmGOlx+I4gD+MxwQIJECpaVm/6rSVNmPqxCu
-peDedfIbGbBQrQp7AkcBAKrPt0xY+iZKmzoOmHfshOFhAt7dbCaGv2RTc6I2hd7S
-=WrwU
+iQJ8BAEBCABmBQJUxV7vXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQxNUIwNzhGMTk3NjE4NjBCQTA0QTQyNjM3
+NjUxMkJCQTA5REQzRDUzAAoJEHZRK7oJ3T1TVncQAIJVM8TVKzPsVk+ef6zTd+AO
+RN9zMiXnA4DNxMH2yZexAUJDkEQ8bQ16qTuDmNcSirMmELZ8bodMrFL0VXXFhrPD
+ilnD9TCJjr2OgS/dGy8Y0z5Z07cNmWR8LtBjTqwLkTrnFxhpqupT+CctOOsfMh+V
+mPJ+/AbGmywcEvNZ82F5/Exvaiovzn8DpM9ewaEWLdHci1uuU4pBUzm2fryJe1yh
+lgrxji6CqseTT8terR4xhE2Yht+AmVAtLcAq5GWYItSdb0VMj3IMYkAY41q8+7e1
+uimUKDGjGDtp21VDnpMizMTU60JDBR6bRkCJjiPktQAUWnCpwiA6PJz5QYh0zRQg
+F5x25Afgc/ZB3zFdtGbRE1TUOrmC15XtlKU5abupuc/6QOi+izXCYiHddk+H+Va8
+mRvN+uaqWO2AtKIY8gNoqDCX+U0oME5Wn7PafLWggFVNIhSqzDN0sTVQETVpEWHW
+IhlwKP6AFFYyul9st+ce7WZr8QZZ7fZ7vCkQMo8TPhrZdiIpG1czVF/3Pz9zolM+
+refFUrBdn+ZvdpUSS6WUvyKyPcPCAfGo4Zj6WyoXonHWgASxlEeW55vKG3Zy5K9R
+trHxsT7GYYi0J63t6gJam09YpZgTfKvwStehAQDBCSvF/CWdQhsfeeFWr6y8wtrJ
+geaa4GhJjVlXpPkYnjIn
+=FBsy
 -----END PGP SIGNATURE-----
