@@ -1,10 +1,10 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/basic-prelude/basic-prelude-0.3.6.0.ebuild,v 1.2 2014/07/25 09:16:39 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/basic-prelude/basic-prelude-0.3.11.ebuild,v 1.1 2015/01/25 21:23:53 qnikst Exp $
 
 EAPI=5
 
-# ebuild generated by hackport 0.3.3.9999
+# ebuild generated by hackport 0.4.3
 
 CABAL_FEATURES="lib profile haddock hoogle hscolour"
 inherit haskell-cabal
@@ -27,7 +27,7 @@ RDEPEND="dev-haskell/hashable:=[profile?]
 	dev-haskell/transformers:=[profile?]
 	dev-haskell/unordered-containers:=[profile?]
 	dev-haskell/vector:=[profile?]
-	>=dev-lang/ghc-6.10.4:=
+	>=dev-lang/ghc-7.4.1:=
 "
 DEPEND="${RDEPEND}
 	>=dev-haskell/cabal-1.8
