@@ -1,31 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/basic-prelude/basic-prelude-0.3.5.0.ebuild,v 1.2 2014/07/25 09:16:39 slyfox Exp $
-
-EAPI=5
-
-# ebuild generated by hackport 0.3.2.9999
-
-CABAL_FEATURES="lib profile haddock hoogle hscolour"
-inherit haskell-cabal
-
-DESCRIPTION="An enhanced core prelude; a common foundation for alternate preludes"
-HOMEPAGE="https://github.com/snoyberg/basic-prelude"
-SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
-
-LICENSE="MIT"
-SLOT="0/${PV}"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-RDEPEND="dev-haskell/hashable:=[profile?]
-		dev-haskell/lifted-base:=[profile?]
-		=dev-haskell/readargs-1.2*:=[profile?]
-		=dev-haskell/system-filepath-0.4*:=[profile?]
-		dev-haskell/text:=[profile?]
-		dev-haskell/transformers:=[profile?]
-		dev-haskell/unordered-containers:=[profile?]
-		dev-haskell/vector:=[profile?]
-		>=dev-lang/ghc-6.10.4:="
-DEPEND="${RDEPEND}
-		>=dev-haskell/cabal-1.8"
